<?xml version="1.0"?>
<package>
  <name>thor_mang_calibration</name>
  <version>0.0.0</version>
  <description>The thor_mang_calibration package</description>

  <maintainer email="vi.wirth@googlemail.com">Vivica Wirth</maintainer>

  <license>BSD</license>

  <author email="vi.wirth@googlemail.com">Vivica Wirth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
